--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "new-post": "node scripts/new-post.js",
     "format": "biome format --write ./src",
     "lint": "biome check --write ./src",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "deploy:github": "./scripts/deploy-github.sh",
+    "deploy:netlify": "./scripts/deploy-netlify.sh",
+    "deploy:local": "./scripts/deploy-local.sh"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
