fix: 修复GLM工作流action.yml路径问题
- 将action.yml从.github目录移动到仓库根目录
- GitHub Actions要求本地Action的action.yml必须在仓库根目录
- 修复"Can't find 'action.yml'"错误路径问题

--- a/.github/workflows/glm-workflow.yml
+++ b/.github/workflows/glm-workflow.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Run GLM Code Assistant
         id: glm
-        uses: ./ # 使用当前目录作为 action
+        uses: ./ # 使用当前仓库作为action
         with:
           glm_api_key: ${{ secrets.GLM_API_KEY }}
           glm_base_url: ${{ secrets.GLM_BASE_URL || 'https://open.bigmodel.cn/api/paas/v4/' }}
