--- a/action.yml
+++ b/action.yml
@@ -33,6 +33,9 @@ inputs:
     description: "GLM API base URL (optional, defaults to https://open.bigmodel.cn/api/paas/v4/)"
     required: false
     default: "https://open.bigmodel.cn/api/paas/v4/"
+  github_token:
+    description: "GitHub token for creating comments"
+    required: true
 
   # Trigger settings
   trigger_phrase:
@@ -62,7 +65,7 @@ outputs:
   branch_created:
     description: "Name of the branch created (if any)"
   pr_created:
-    description: "URL of the PR created (if any)"
+    description: "URL of PR created (if any)"
 
 runs:
   using: "composite"
@@ -202,7 +205,7 @@ runs:
 
           # 调用GitHub API创建评论
           curl -s -X POST \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: Bearer ${{ inputs.github_token }}" \
             -H "Accept: application/vnd.github.v3+json" \
             -H "Content-Type: application/json" \
             -d "{
